rama-utils/tests/include_dir_no_compile/include_dir_path_is_file.rs
use ::rama_utils::include_dir::{Dir, include_dir};

static _ASSETS: Dir = include_dir!("./bar/example.txt");

fn main() {}
